compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unreachable_warning_for_panic_as_last_item_of_pipe_on_next_expression.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n        pub fn wibble(_) { 1 }\n        pub fn main() {\n            1 |> wibble |> panic\n            \"unreachable\"\n        }\n        "
---
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:5:13
  │
5 │             "unreachable"
  │             ^^^^^^^^^^^^^

This code is unreachable because the expression before it always panics.
