compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unreachable_warning_on_following_expression_if_panic_is_last_in_a_block.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "pub fn main() {\n          let _ = {\n            panic\n          }\n          1\n        }"
---
warning: Unreachable code
  ┌─ /src/warning/wrn.gleam:5:11
  │
5 │           1
  │           ^

This code is unreachable because the expression before it always panics.
