compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_binary_operation_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub fn main() {\n  let string = \"a\" <> \"b\" \"c\" <> \"d\"\n  string\n}\n"
---
warning: Unused binary operation
  ┌─ /src/warning/wrn.gleam:3:27
  │
3 │   let string = "a" <> "b" "c" <> "d"
  │                           ^^^^^^^^^^ This value is never used

Hint: You can safely remove it.
