compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_bit_array.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n    pub fn main() {\n        <<3>>\n\t\t\t\t2\n    }"
---
warning: Unused literal
  ┌─ /src/warning/wrn.gleam:3:9
  │
3 │         <<3>>
  │         ^^^^^ This value is never used

Hint: You can safely remove it.
